--- a/platformio.ini
+++ b/platformio.ini
@@ -301,7 +301,7 @@ platform    = ststm32
 framework   = arduino
 board       = armed_v1
 build_unflags = -Os
-build_flags = ${common.build_flags} -DUSBCON -DUSBD_VID=0x0483 '-DUSB_MANUFACTURER="Unknown"' '-DUSB_PRODUCT="ARMED_V1"' -DHAL_PCD_MODULE_ENABLED -DUSBD_USE_CDC -Os -ffreestanding -fsigned-char -fno-move-loop-invariants -fno-strict-aliasing -std=gnu11 -std=gnu++11
+build_flags = ${common.build_flags} -DUSBCON -DUSBD_VID=0x0483 '-DUSB_MANUFACTURER="Unknown"' '-DUSB_PRODUCT="ARMED_V1"' -DHAL_PCD_MODULE_ENABLED -DUSBD_USE_CDC -O2 -ffreestanding -fsigned-char -fno-move-loop-invariants -fno-strict-aliasing -std=gnu11 -std=gnu++11
 lib_deps    = ${common.lib_deps}
 lib_ignore  = Adafruit NeoPixel, c1921b4
 src_filter  = ${common.default_src_filter} +<src/HAL/HAL_STM32>
