--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ build_dir   = .pioenvs
 lib_dir     = .piolib
 libdeps_dir = .piolibdeps
 boards_dir  = buildroot/share/PlatformIO/boards
-env_default = ARMED_CORE
+env_default = ARMED
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
