--- a/platformio.ini
+++ b/platformio.ini
@@ -316,8 +316,8 @@ monitor_speed = 250000
 # ARMED
 #
 [env:ARMED]
-platform = https://github.com/platformio/platform-ststm32.git
-# platform    = ststm32
+# platform = https://github.com/platformio/platform-ststm32.git
+platform    = ststm32
 framework   = arduino
 board       = armed_v1
 build_unflags = -Os
