Optional hid upload

--- a/platformio.ini
+++ b/platformio.ini
@@ -378,9 +378,10 @@ board       = armed_v1
 build_unflags = -Os
 build_flags = ${common.build_flags} -DUSBCON -DUSBD_VID=0x0483 '-DUSB_MANUFACTURER="Unknown"' '-DUSB_PRODUCT="ARMED_V1"' -DHAL_PCD_MODULE_ENABLED -DUSBD_USE_CDC -DDISABLE_GENERIC_SERIALUSB -DHAL_UART_MODULE_ENABLED -O2 -fsigned-char -fno-move-loop-invariants -fno-strict-aliasing -Wno-deprecated-declarations -Wno-unused-function -Wno-unused-macros -Wno-unused-variable -Wno-misleading-indentation
 lib_deps    = ${common.lib_deps}
-lib_ignore  = Adafruit NeoPixel
+lib_ignore  = Adafruit NeoPixel 
 src_filter  = ${common.default_src_filter} +<src/HAL/HAL_STM32>
 monitor_speed = 250000
+#upload_protocol = hid
 
 #
 # Longer 3D board in Alfawise U20 (STM32F103VET6)
